[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/robotDriver.gd" type="Script" id=1]
[ext_resource path="res://Textures/arrow.png" type="Texture" id=2]
[ext_resource path="res://Textures/white mist.png" type="Texture" id=3]
[ext_resource path="res://Audio/thud1.smp" type="Sample" id=4]
[ext_resource path="res://Audio/motor.smp" type="Sample" id=5]
[ext_resource path="res://scripts/motorNoise.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Robot Ball.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 9.11139, 1.95416 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SampleLibrary" id=3]

samples/thud1 = {
"db": 0.0,
"pitch": 0.74,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="SampleLibrary" id=4]

samples/motor = {
"db": 0.0,
"pitch": 1.0,
"priority": 100,
"sample": ExtResource( 5 )
}

[node name="Robot" type="RigidBody2D" groups=[
"robots",
]]

transform/pos = Vector2( 436.064, 327.056 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.41052, 0, -10 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 2, 0, 0, 1.55391, -0.0626526, 4.79294 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Matrix32( 0.4, 0, 0, 0.7, -16, -13 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 2 )
shapes/3/transform = Matrix32( 0.4, 0, 0, 0.7, 16, -13 )
shapes/3/trigger = false
collision/layers = 4
collision/mask = 13
mode = 0
mass = 1.0
friction = 0.1
bounce = 0.26
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 15.0
damp_override/angular = 15.0
script/script = ExtResource( 1 )
input_prefix = null
linImpulse = 3000.0
angImpulse = 100.0
use_joystick = true
deadzone = 0.12
fire_speed = -500.0
fire_offset = -4.0
reload_delay = 0.25
left_defense_center = 350.0
right_defense_center = 675.0
defense_judgement_dist = 50.0
left_def_top = 165.0
right_def_bot = 440.0
balls_path = NodePath("")

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.18, 0.18 )
z/z = 3
z/relative = false
texture = ExtResource( 2 )

[node name="ball pickup" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -10 )
transform/scale = Vector2( 1, 1.41052 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.0626526, 4.79294 )
transform/scale = Vector2( 2, 1.55391 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D1" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -16, -13 )
transform/scale = Vector2( 0.4, 0.7 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 16, -13 )
transform/scale = Vector2( 0.4, 0.7 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 3

[node name="shoot spray" type="Particles2D" parent="."]

transform/pos = Vector2( 0, -15 )
config/amount = 1000
config/lifetime = 0.8
config/emit_timeout = 0.1
config/emitting = false
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 3 )
params/direction = 180.0
params/spread = 26.75
params/linear_velocity = 150.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 800.0
params/initial_angle = 0.0
params/initial_size = 0.35
params/final_size = 0.09
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 1.0

[node name="sample player" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.187

[node name="motor sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
script/script = ExtResource( 6 )
pitch_mult = 0.4
min_speed = 0.1
volume_linear = 0.3
volume_base = 0.05

[node name="RobotBall" parent="." instance=ExtResource( 7 )]

[connection signal="body_enter_shape" from="." to="." method="_on_Robot_body_enter_shape"]

[connection signal="body_exit" from="." to="." method="_on_Robot_body_exit"]


